修复厂商冲突

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yangcheng/easydevelop",
+    "name": "yangcheng0826/easydevelop",
     "description": "Easy to develop class",
     "type": "library",
     "keywords": ["PHP", "Wechat", "Excel", "xlsx", "xls", "ods", "gnumeric", "spreadsheet"],
