--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
     ],
     "require": {
         "php": ">=7.0",
+        "vendor/package": "1.3.2",
+        "vendor/package2": "1.*",
+        "vendor/package3": "^2.0.3",
         "composer-plugin-api": "^1.0 || ^2.0",
         "phpoffice/phpspreadsheet": ">=1.0"
     },
