新增微信支付工具类：上线了微信公众号支付

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "vendor/package2": "1.*",
         "vendor/package3": "^2.0.3",
         "composer-plugin-api": "^1.0 || ^2.0",
-        "phpoffice/phpspreadsheet": ">=1.0"
+        "phpoffice/phpspreadsheet": ">=1.0",
+        "yansongda/pay": "^2.10"
     },
     "autoload": {
         "psr-4": {
